# Research-Challenge-2026

./: .gitignore  AGENTS.md  README.md
Investment_Strategy/: __main__.py  feature_engineering.py  run_backtest_engine.py  run_data_curator.py  run_portfolio_construction.py  strategy_design.py
Investment_Strategy/Config/: .env  backtest_engine_parameters.xlsx  data_curator_parameters.xlsx  parameters_datacurator.xlsx  ~$parameters_datacurator.xlsx
Investment_Strategy_Example/: pyproject.toml  run_backtest_engine.py  run_data_curator.py  run_portfolio_construction.py
Investment_Strategy_Example/.agents/skills/code_writing/references/: python.md
Investment_Strategy_Example/.agents/skills/kaxanuk_data_curator_custom_calculation_builder/: SKILL.md
Investment_Strategy_Example/.agents/skills/kaxanuk_data_curator_custom_calculation_builder/references/: tags_d.md  tags_f.md  tags_fcf.md  tags_fis.md  tags_s.md
Investment_Strategy_Example/Backtest_Engine/: portfolio_weights_20260418173400_backtest_results.xlsx  portfolio_weights_20260418173609_backtest_results.xlsx  portfolio_weights_20260418173939_backtest_results.xlsx  portfolio_weights_20260418174610_backtest_results.xlsx  portfolio_weights_20260419202526_backtest_results.xlsx  portfolio_weights_20260419210437_backtest_results.xlsx
Investment_Strategy_Example/Config/: backtest_engine_parameters.xlsx  data_curator_parameters.xlsx
Investment_Strategy_Example/Data_Curator/: ticker_list.xlsx
Investment_Strategy_Example/src/data_curator/outlier_adjusted_data/: shares_outstanding_outlier_adjusted.py
(+8 files in other folders)
