[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "investment-strategy-example"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "kaxanuk-data-curator",
    "kaxanuk-data-curator-yahoo-finance",
    "kaxanuk-backtest-engine",
    "numpy",
    "pandas",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = ["src"]